Add Google site verification meta tag
Added Google site verification meta tag to the head section.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="PASTE_YOUR_CODE_HERE" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <meta name="description" content="MARKPOINT CONSULTING LIMITED offers professional accounting, auditing, and tax consultancy services in Kisii, Kenya. Bookkeeping, audits, VAT, PAYE, and KRA support." />
   <meta name="keywords" content="Accounting services Kisii, Tax consultant Kisii, Audit services Kenya, MARKPOINT Consulting" />
   <meta name="author" content="MARKPOINT CONSULTING LIMITED" />
@@ -163,3 +165,4 @@
 
 </body>
 </html>
+
